--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -102,7 +102,7 @@ input[type="submit"] {
 
 input[type="text"] {
     font-size: 1.1em;
-    margin: 25px 54px 25px 0px;
+    margin: 25px 5px 25px 0px;
     width: 90%;
 }
 
